ICEX-737 #comment fix uiSection z-index bug

--- a/components/uiSection/uiSection.sass
+++ b/components/uiSection/uiSection.sass
@@ -1,6 +1,5 @@
 .section__container
   position: relative
-  z-index: 2
 
 .section__cotnainer--fullheight
   height: 100vh
